# hjc

./: .gitignore  .input.txt.swp  README.md  hjc.cabal  u01-input.txt
app/: Main.hs
cf-graph-output/: Test.ps
cmm-output/: Add-canonized.tree  Add-cmm.tree  Makefile  Readme.md  testprog  testprog.c
cmm-output/lib/: runtime.c
examples/: .Add.java.swp  AD.java  Add.java  Arithmetic.java  ArrSum.java  ArrayAccess_v2.java  Fib.java  Precedence.java  Scope2.java  Spill.java  String.java  Sum.java  Test.java  VVST.java  t1.sl  t2.sl  t4.sl
examples/Inheritance/: AnimalInheritance.java
examples/Large/: Div.java  E.java  Fannkuch.java  GameOfLifeAnim.java  Graph.java  Hanoi.java  Mandelbrot.java  MandelbrotAnim.java  Newton.java  Pi.java  PiSin.java  Raytrace.java  RaytraceAndGauss.java
examples/MiniJava_Examples/Inheritance/: NewtonOO.java  QuickSortOO.java
examples/MiniJava_Examples/Large/: ManyArgs.java  Primes.java
examples/MiniJava_Examples/ShouldFail/TypeErrors/: LinkedListBUG.java
examples/MiniJava_Examples/Small/: Add.java  ArrayAccess.java
examples/ShouldFail/: Bounds1.java  Bounds2.java  Naming1.java  Naming3.java  Nesting.java  WrongReturnType.java
examples/ShouldFail/ParseErrors/: BrokenLex1.java  BrokenLex2.java  MissingThis.java
examples/ShouldFail/RuntimeErrors/: ArrSumBUG.java  ArrayBounds.java
examples/ShouldFail/TypeErrors/: MethodWronglySpelled.java  PrintFirstArg.java  TooManyArguments.java  UndeclaredType.java  UndeclaredVar1.java  UndeclaredVar2.java  WrongTypeDeclared.java
examples/Small/: Add.java  ArrSum.java  Effects.java  OurArrSum.java  Shadow2.java  ShortCutReturn.java  Stck.java  TestEq.java  TrivialClass.java  While.java
examples/z_ShouldFail/: Bounds3.java  Naming2.java  Naming5.java
examples/z_ShouldFail/ParseErrors/: BigMain.java
examples/z_ShouldFail/TypeErrors/: Bounds4.java  MethodCallWrong.java  Naming4.java
if-graph-output/: Makefile
output/: Arg-output.java  Raytrace-output.java
src/: AST.hs  ASTParser.hs  BNF.hs  Config.hs  Lexer.hs  Output.hs  Parser.hs  ParserLens.hs  ParserRecords.hs  SymbolTable.hs  TimeMonad.hs
src/Cmm/: ASTToCmm.hs  ASTToCmmParser.hs  ActivityAnalysis.hs  Backend.hs  CAST.hs  Canon.hs  CmmParserCore.hs  ControlFlowGraph.hs  Core.hs  DirectedGraph.hs  I386Instr.hs  InterferenceGraph.hs  LabelGenerator.hs  RegisterAllocation.hs
src/Cmm/Register/: Allocation.hs  Core.hs
src/Cmm/X86/: Backend.hs  ControlFlowGraph.hs  Core.hs  InstrCore.hs  Spilling.hs
src/Cmm/X86Backend/: X86Backend.hs
src/Risc386Clone/: Frame.hs  FrameIntel.hs  GenSym.hs  Intel.hs  IntelMain.hs  LIESMICH.html  LexIntel.x  Makefile  Makefile~  ParseIntel.y  README.txt  StateIntel.hs  TokenIntel.hs  Util.hs  Wellformed.hs  risc386.cabal_bak
src/TypeCheck/: ErrorMsgs.hs  TCCore.hs  TypeCheck.hs
test/: ASTParserSpec.hs  CmmParserSpec.hs  ConfigSpec.hs  Spec.hs  X86AllocSpec.hs  X86Spec.hs
test/TypeCheck/: TypeCheckSpec.hs
test/examples/: Add.java  Brainfuck.java  GameOfLifeAnim.java  Hanoi.java  Raytrace.java  RaytraceAndGauss.java  String.java  TreeVisitor.java
test/examples/Inheritance/: EulerOO.java  Inheritance.java  PrimesOO.java
test/examples/MiniJava_Examples/Large/: FibL.java  GameOfLife.java  Newton.java
test/examples/MiniJava_Examples/ShouldFail/: Scope.java
test/examples/MiniJava_Examples/ShouldFail/ParseErrors/: BrokenParse1.java  BrokenParse2.java
test/examples/MiniJava_Examples/ShouldFail/TypeErrors/: Shadow.java
test/examples/MiniJava_Examples/Small/: Add.java  ShortCutAnd.java  While.java
test/examples/z_ShouldFail/ParseErrors/: StringLiteral.java
test/examples/z_ShouldFail/TypeErrors/: TypeOfArgWrong.java  WrongArgumentTypes.java  WrongArgumentTypes2.java
x86-output/: Add.s  Makefile  testprog  testprog.s
