name:                hjc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hjc#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Isenko
maintainer:          alex.isenko@protonmail.com.com
copyright:           2017 Alexander Isenko
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-tools:         happy >= 1.15 && < 2,
                       alex >= 2.0 && < 4
  exposed-modules:     Lexer
                     , AST
                     , ASTParser
                     , ParserRecords
                     , ParserLens
                     , Output
                     , TimeMonad
                     , SymbolTable
                     , TypeCheck.TypeCheck
                     , TypeCheck.TCCore
                     , TypeCheck.ErrorMsgs
                     , Config
                     , Cmm.LabelGenerator
                     , Cmm.CAST
                     , Cmm.ASTToCmm
                     , Cmm.Core
                     , Cmm.Canon
                     , Cmm.I386Instr
                     , Cmm.Backend
                     , Cmm.X86.Backend
                     , Cmm.X86.Core
                     , Cmm.DirectedGraph
                     , Cmm.ControlFlowGraph
                     , Cmm.ActivityAnalysis
                     , Cmm.InterferenceGraph
                     , Cmm.RegisterAllocation
                     , Risc386Clone.IntelMain
                     , Risc386Clone.Frame
                     , Risc386Clone.FrameIntel
                     , Risc386Clone.GenSym
                     , Risc386Clone.Intel
                     , Risc386Clone.LexIntel
                     , Risc386Clone.ParseIntel
                     , Risc386Clone.StateIntel
                     , Risc386Clone.TokenIntel
                     , Risc386Clone.Util
                     , Risc386Clone.Wellformed
  build-depends:       base         >= 4.7     && < 5
                     , megaparsec   >= 5.2.0   && < 6
                     , containers   >= 0.5.7.1 && < 6
                     , mtl          >= 2.2.0   && < 3
                     , transformers >= 0.5.0.0 && < 6
                     , lens         >= 4.0.0   && < 5
                     , rainbow >= 0.28.0.4
                     , filepath   >= 1.4.0.0
                     , split > 0.2.3.0 && < 0.3.0.0
                     , optparse-generic >= 1.1.5
                     , extra            >= 1.5
                     , pretty >= 1.0 && < 1.2
                     , array >= 0.5 && < 0.6
  default-language:    Haskell2010

executable hjc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hjc
                     , megaparsec  >=5.2.0 && < 6
                     , rainbow >= 0.28.0.4
                     , directory  >= 1.0.0.0
                     , filepath   >= 1.4.0.0
                     , optparse-generic >= 1.1.5
  default-language:    Haskell2010

test-suite hjc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ASTParserSpec
                     , ConfigSpec
                     , TypeCheck.TypeCheckSpec
                     , CmmParserSpec
                     , X86Spec
  build-depends:       base
                     , hjc
                     , megaparsec  >=5.2.0 && < 6
                     , QuickCheck >= 2.9.2
                     , hspec >= 2.4.3
                     , process      >= 1.4.3.0
                     , directory    >= 1.0.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cirquit/hjc
